--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -122,7 +122,8 @@ Failure to do so will result in 400 errors after first query - with the error "E
 Additional information can be found in the [https://github.com/OpenGrok/OpenGrok/blob/master/doc/EXAMPLE.txt EXAMPLE.txt] in the doc folder
 
 === Windows installation ===
-http://algopadawan.blogspot.co.uk/2012/07/installing-opengrok-on-windows.html
+*August 22, 2017: http://deferredhappiness.com/opengrok/
+*July 20, 2012 (partially broken): http://algopadawan.blogspot.co.uk/2012/07/installing-opengrok-on-windows.html
 
 === CLI - Command Line Interface Usage ===
 
